--- a/FirstMVCApp/FirstMVCApp/Views/Home/Contact.cshtml
+++ b/FirstMVCApp/FirstMVCApp/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
+<address>praveen contact
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
